<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_thin"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/hr"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/login_with"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_with" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sign_in_google_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/common_google_signin_btn_text_dark_normal"
                    android:text="@string/sign_in_with_google"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/GithubSingButton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/hr2"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/login_or"
                    app:layout_constraintEnd_toStartOf="@+id/login_or"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/login_or" />

                <TextView
                    android:id="@+id/login_or"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login_or"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

                <View
                    android:id="@+id/hr3"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/login_or"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/login_or"
                    app:layout_constraintTop_toTopOf="@+id/login_or"
                    app:layout_constraintVertical_bias="0.529" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="332dp">

                <EditText
                    android:id="@+id/login_email_address_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:hint="@string/mail_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/login_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:hint="@string/password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/log_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/colorTertiary"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/action_log_in_short"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/hr4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/login_or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/login_or"
                app:layout_constraintTop_toTopOf="@+id/login_or"
                app:layout_constraintVertical_bias="0.529" />

            <TextView
                android:id="@+id/login_if"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="start"
                android:text="@string/login_if"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorTertiary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/action_sign_in_short"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="374dp" />
        </LinearLayout>


</androidx.core.widget.NestedScrollView>